--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ python-telegram-bot = "*"
 bert-serving-server = "*"
 tensorflow = "*"
 bert-serving-client = "*"
+python-i18n = "*"
+langdetect = "*"
 
 [requires]
 python_version = "3.6"
